--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -1,3 +1,23 @@
-body {
-  background-color: 000000;
+::-webkit-input-placeholder { /* Chrome */
+  color: #aeaeae;
 }
+
+:-ms-input-placeholder { /* IE 10+ */
+  color: #aeaeae;
+}
+
+::-moz-placeholder { /* Firefox 19+ */
+  color: #aeaeae;
+  opacity: 1;
+}
+
+:-moz-placeholder { /* Firefox 4 - 18 */
+  color: #aeaeae;
+  opacity: 1;
+}
+
+@import "blocks/header";
+@import "blocks/page-body";
+@import "blocks/search";
+@import "blocks/search-button";
+@import "blocks/user-nav";
