main block upper part added

--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -17,6 +17,8 @@
 }
 
 @import "blocks/header";
+@import "blocks/info";
+@import "blocks/main";
 @import "blocks/page-body";
 @import "blocks/search";
 @import "blocks/search-button";
