--- a/source/scss/blocks/main.scss
+++ b/source/scss/blocks/main.scss
@@ -1,3 +1,8 @@
+.main__info {
+  margin-top: 39px;
+  margin-bottom: 108px;
+}
+
 .main__title {
   font-family: "Playfair Display", "Arial", serif;
   font-weight: bold;
