--- a/source/scss/blocks/page-body.scss
+++ b/source/scss/blocks/page-body.scss
@@ -5,6 +5,7 @@
   background-color: #0a090a;
   color: #ffffff;
   font-family: "Roboto", "Arial", sans-serif;
+  padding-bottom: 65px;
 }
 
 .page-body__wrapper {
