--- a/source/scss/blocks/content.scss
+++ b/source/scss/blocks/content.scss
@@ -15,3 +15,19 @@
   margin-top: 44px;
   margin-right: 50px;
 }
+
+@media (max-width: 575px) {
+  .content {
+    grid-template-columns: 1fr;
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+  .content__large-info {
+    margin-right: 0;
+  }
+
+  .content__short-info {
+    margin: 0;
+  }
+}
