--- a/source/scss/blocks/header.scss
+++ b/source/scss/blocks/header.scss
@@ -11,3 +11,15 @@
   font-size: 24px;
   line-height: 28px;
 }
+
+@media (max-width: 575px) {
+  .header {
+    grid-template-columns: 1fr min-content;
+  }
+
+  .header__search {
+    order: 3;
+    width: 100%;
+    grid-column: 1 / 3;
+  }
+}
