--- a/source/scss/blocks/nav-list.scss
+++ b/source/scss/blocks/nav-list.scss
@@ -10,6 +10,8 @@
   font-size: 18px;
   line-height: 21px;
   text-align: center;
+  text-decoration: none;
+  color: #000000;
 
   &_active {
     color: #ff8f27;
