--- a/source/scss/blocks/page-body.scss
+++ b/source/scss/blocks/page-body.scss
@@ -6,6 +6,7 @@
   color: #ffffff;
   font-family: "Roboto", "Arial", sans-serif;
   padding-bottom: 65px;
+  min-width: 320px;
 }
 
 .page-body__wrapper {
